[package]
name = "helix-dadbod"
version = "0.0.1"
edition = "2021"

[lib]
name = "helix_dadbod"
# path = "src/lib.rs"
crate-type = ["cdylib"]  # FFI dylib for Steel + rlib for binary

[dependencies]
# Steel FFI integration
steel-core = { version = "0.7.0", features = ["dylibs", "sync"] }
abi_stable = "0.11"
once_cell = "1.19"

# Async runtime and database
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
async-trait = "0.1"

# Configuration and serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# SSH tunnel support
russh = "0.45"
russh-keys = "0.45"

# Utilities
anyhow = "1"
comfy-table = "7"
chrono = "0.4"
dirs = "5"

# Logging
log = "0.4"
simplelog = "0.12"

# SSH host key verification
base64 = "0.22"
sha1 = "0.10"
hmac = "0.12"

[features]
default = []
ffi = []  # Enable FFI module with --features ffi

[profile.release]
opt-level = 3
lto = true  # Link-time optimization for smaller dylib
